# Agentic-RAG-Chatbot-Azure-Native

./: .gitignore  CHANGELOG.md  Makefile  README.md  app_logger.py  pyproject.toml
docs/: PLAN.md  agentic_ai_system_future_features_plan.md  architecture.md  cloud_storage_future_features_plan.md
src/agentic_rag_chatbot_azure_native/: main.py
src/agentic_rag_chatbot_azure_native/auth/: azure_ad_auth_provider.py
src/agentic_rag_chatbot_azure_native/backend/: tasks.py
src/agentic_rag_chatbot_azure_native/backend/config/: config.py
src/agentic_rag_chatbot_azure_native/backend/databases/: cosmos_db_date_layer.py  mongo_db_data_layer.py
src/agentic_rag_chatbot_azure_native/backend/indexer/: llama_indexer.py  pdf_indexer.py  user_uploaded_file_indexer.py
src/agentic_rag_chatbot_azure_native/backend/orchestration/: agentic_ai_system.py  code_interpreter.py  llm_loader.py  pandasai_system.py  prompts.py
src/agentic_rag_chatbot_azure_native/backend/retrievers/: azure_blob_file_retriever.py
src/agentic_rag_chatbot_azure_native/backend/utils/: helper.py
src/agentic_rag_chatbot_azure_native/frontend/: app.py
src/agentic_rag_chatbot_enterprise_ready/backend/: tasks.py
src/agentic_rag_chatbot_enterprise_ready/backend/credentials/: aws_credential_manager.py  azure_credential_manager.py
src/agentic_rag_chatbot_enterprise_ready/backend/databases/: cosmos_db_date_layer.py
src/agentic_rag_chatbot_enterprise_ready/backend/indexer/: azure_search_initializer.py  index_engine.py  llama_indexer.py  pdf_indexer.py  user_uploaded_file_indexer.py
src/agentic_rag_chatbot_enterprise_ready/backend/orchestration/: agentic_ai_system.py  graph_rag.py  llm_loader.py  llm_models.py  pandasai_system.py  reranker.py
src/agentic_rag_chatbot_enterprise_ready/backend/retrievers/: s3_blob_file_retriever.py
src/agentic_rag_chatbot_enterprise_ready/backend/utils/: checksum_file_path.py
src/agentic_rag_chatbot_enterprise_ready/frontend/: app.py
src/auth/: validate_jwt.py
src/backend/: UploadFileWrapper.py  agentic_ai_system.py  config.py  create_engine.py  credential_manager.py  mongo_db_data_layer.py  prompts.py  utility.py
src/frontend/: app.py
tests/: test_agent_logic.py  test_indexer_utils.py
version/: __init__.py  version.py
