[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-chatbot-enterprise-ready"
version = "1.0.0"
description = "POC - A global enterprise Agentic RAG system featuring multi-agent orchestration and cloud persistence."
authors = [
    { name = "Aditya Gupta", email = "aditya.gupta671@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "chainlit",
    "llama-index",
    "llama-index-llms-openai",
    "llama-index-llms-azure-openai",
    "llama-index-embeddings-azure-openai",
    "llama-index-vector-stores-azureaisearch",
    "azure-identity",
    "azure-keyvault-secrets",
    "azure-storage-blob",
    "azure-cosmos",
    "azure-search-documents",
    "azure-ai-projects",
    "azure-ai-inference",
    "botocore",
    "boto3",
    "openai",
    "langchain",
    "pandas",
    "pandasai",
    "pandasai_openai",
    "python-dotenv",
    "nest-asyncio",
    "requests",
    "markdown",
    "pymongo",
    "pyMupdf",
    "xhtml2pdf",
    "celery",
    "motor",
    "docx",
    "e2b"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "twine",
    "build"
]

[project.scripts]
agentic-rag = "agentic_rag_chatbot_enterprise_ready.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentic_rag_chatbot_enterprise_ready*"]